Updated some code

--- a/product.html
+++ b/product.html
@@ -15,6 +15,7 @@
       <a href="product.html">Product</a>
       <a href="shop.html">Shop</a>
       <a href="contact.html">Contact</a>
+      <a href="login.html">LOGIN</a>
       
     </nav>
   </header>
