modefy css in home page with grid layout

--- a/allproducts.html
+++ b/allproducts.html
@@ -48,7 +48,7 @@
     </div>
     <div class="item-card">
       <img src="image/watch" alt="Item 2">
-      <p class="item-name">Watch</p>
+      <p class="item-name">watch</p>
       <p class="item-price">Rs. 3000</p>
     </div>
     <div class="item-card">
@@ -76,23 +76,23 @@
   <!-- Row 2 -->
   <div class="items-row">
     <div class="item-card">
-      <img src="image/jeans" alt="Item 7">
-      <p class="item-name">Jeans</p>
+      <img src="image/usb" alt="Item 7">
+      <p class="item-name">Usb</p>
       <p class="item-price">Rs. 1800</p>
     </div>
     <div class="item-card">
-      <img src="image/jacket" alt="Item 8">
-      <p class="item-name">Jacket</p>
+      <img src="image/charger" alt="Item 8">
+      <p class="item-name">charger</p>
       <p class="item-price">Rs. 2500</p>
     </div>
     <div class="item-card">
-      <img src="image/mobile" alt="Item 9">
-      <p class="item-name">Mobile</p>
+      <img src="image/clip" alt="Item 9">
+      <p class="item-name">clip</p>
       <p class="item-price">Rs. 18000</p>
     </div>
     <div class="item-card">
-      <img src="image/sunglass" alt="Item 10">
-      <p class="item-name">Sunglasses</p>
+      <img src="image/ring" alt="Item 10">
+      <p class="item-name">ring</p>
       <p class="item-price">Rs. 1000</p>
     </div>
     <div class="item-card">
