--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
       <a href="product.html">Product</a>
       <a href="shop.html">Shop</a>
       <a href="contact.html">Contact</a>
+      <a href="login.html">LOGIN</a>
     </nav>
   </header>
 
@@ -50,7 +51,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
-          <li><a href="#">Flash Sale</a></li>
+          <li><a href="product.html">Product</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
