--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <img src="image/watch" alt="Item 2">
       <p class="item-name">Watch</p>
       <p class="item-price">Rs. 3000</p>
-      
+
     </div>
     <div class="item-card">
       <img src="image/jorden" alt="Item 3">
@@ -220,7 +220,7 @@
         <div class="footer-content">
             <div class="footer-column">
                 <h3>About Us</h3>
-                <p>Maize is your trusted online shop for quality products at the best prices.</p>
+                <p>Maize is your trusted online shop for quality products at the best prices.  <br><br>Thanks for visiting <br><br></p>
             </div>
 
             <div class="footer-column">
