--- a/product.html
+++ b/product.html
@@ -393,5 +393,32 @@
       <p class="item-price">Rs. 600</p>
     </div>
   </div>
+  
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-column">
+        <h3>About Us</h3>
+        <p>Maize is your trusted online shop for quality products at the best prices.</p>
+      </div>
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="product.html">Product</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Contact</h3>
+        <p>Email: maize@shop.com</p>
+        <p>Phone: +977-9876543210</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Maize. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
