--- a/shop.html
+++ b/shop.html
@@ -18,6 +18,7 @@
       <a href="product.html">Product</a>
       <a href="shop.html">Shop</a>
       <a href="contact.html">Contact</a>
+      <a href="login.html">LOGIN</a>
     
     </nav>
   </header>
@@ -194,6 +195,34 @@
     </div>
   </div>
  <a href="allproducts.html" class="allprod">Shop all here</a>
+
+ 
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-column">
+        <h3>About Us</h3>
+        <p>Maize is your trusted online shop for quality products at the best prices.</p>
+      </div>
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="product.html">Product</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Contact</h3>
+        <p>Email: maize@shop.com</p>
+        <p>Phone: +977-9876543210</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Maize. All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
