--- a/allproducts.html
+++ b/allproducts.html
@@ -289,23 +289,23 @@
 
 <!-- Flash Sale Section -->
 <section class="flash-sale">
-  <h2>Flash Sale</h2>
+  <h2>YOU MAY LIKE</h2>
   
   <!-- Row 1 -->
   <div class="items-row">
     <div class="item-card">
-      <img src="image/jorden" alt="Flash 1">
-      <p class="item-name">Jordan Shoes</p>
+      <img src="image/sweater" alt="Flash 1">
+      <p class="item-name">sweater</p>
       <p class="item-price">Rs. 1200</p>
     </div>
     <div class="item-card">
-      <img src="image/earing" alt="Flash 2">
-      <p class="item-name">EARING</p>
+      <img src="image/kurtha" alt="Flash 2">
+      <p class="item-name">kurtha</p>
       <p class="item-price">Rs. 950</p>
     </div>
     <div class="item-card">
-      <img src="image/speaker" alt="Flash 3">
-      <p class="item-name">Bluetooth Speaker</p>
+      <img src="image/shoes1" alt="Flash 3">
+      <p class="item-name">shoes1</p>
       <p class="item-price">Rs. 2100</p>
     </div>
     <div class="item-card">
