--- a/product.html
+++ b/product.html
@@ -366,34 +366,33 @@
   <h2>YOU MAY LIKE</h2>
   
   <!-- Row 1 -->
-  <div class="items-row">
+<div class="items-row">
     <div class="item-card">
-      <img src="image/jorden" alt="Flash 1">
-      <p class="item-name">Jordan Shoes</p>
+      <img src="image/sweater" alt="Flash 1">
+      <p class="item-name">sweater</p>
       <p class="item-price">Rs. 1200</p>
     </div>
     <div class="item-card">
-      <img src="image/earing" alt="Flash 2">
-      <p class="item-name">EARING</p>
+      <img src="image/kurtha" alt="Flash 2">
+      <p class="item-name">kurtha</p>
       <p class="item-price">Rs. 950</p>
     </div>
     <div class="item-card">
-      <img src="image/speaker" alt="Flash 3">
-      <p class="item-name">Bluetooth Speaker</p>
+      <img src="image/shoes1" alt="Flash 3">
+      <p class="item-name">shoes1</p>
       <p class="item-price">Rs. 2100</p>
     </div>
     <div class="item-card">
-      <img src="image/digitalwatch" alt="Flash 4">
-      <p class="item-name">Digital Watch</p>
+      <img src="image/spider" alt="Flash 4">
+      <p class="item-name">Iphone Case</p>
       <p class="item-price">Rs. 1300</p>
     </div>
     <div class="item-card">
-      <img src="image/naruto" alt="Flash 5">
-      <p class="item-name">Anime T-Shirt</p>
+      <img src="image/lens" alt="Flash 5">
+      <p class="item-name">MOBILE LENS</p>
       <p class="item-price">Rs. 600</p>
     </div>
   </div>
-  
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
