--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
-          <li><a href="#">Flash Sale</a></li>
+          <li><a href="product.html">Product</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
