--- a/product.html
+++ b/product.html
@@ -382,8 +382,8 @@
       <p class="item-price">Rs. 2100</p>
     </div>
     <div class="item-card">
-      <img src="image/digitalwatch" alt="Flash 4">
-      <p class="item-name">Digital Watch</p>
+      <img src="image/sunglass" alt="Flash 4">
+      <p class="item-name">Sun glass</p>
       <p class="item-price">Rs. 1300</p>
     </div>
     <div class="item-card">
