marquee behavior alternative

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 
  <!-- Marquee Section (Sliding Images) -->
-<marquee behavior="scroll" direction="left" scrollamount="8">
+<marquee behavior="Alternative" direction="left" scrollamount="8">
   <img src="image/cream" alt="Slide 1" class="slide-img">
    <img src="image/creaam2" alt="Slide 2" class="slide-img">
    <img src="image/creaam2" alt="Slide 2" class="slide-img">
