offeer change too offer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Banner -->
 <div class="banner">
   <h1>Welcome to Maize</h1>
-  <p>get up to 50% ofeer </p>
+  <p>get up to 50% offer </p>
   <a href="shop.html" class="shop-button">Shop Now</a>
 </div>
 
