Updated navbar to sticky, styled map and footer

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Shop</title>
+  <title>maize</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- Header -->
   <header>
-    <div class="logo">Maize</div>
-    <nav>
+    <div class="logo">MAZE</div>
+    <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
       <a href="shop.html">Shop</a>
@@ -28,13 +28,13 @@
   
   <!-- Banner -->
 <div class="banner">
-  <h1>Welcome to Maize</h1>
-  <p>get up to 50% ofeer </p>
+  <h1>Welcome to Maze</h1>
+  <p>get up to 50% offer </p>
   <a href="shop.html" class="shop-button">Shop Now</a>
 </div>
 
  <!-- Marquee Section (Sliding Images) -->
-<marquee behavior="scroll" direction="left" scrollamount="8">
+<marquee behavior="alternate" direction="left" scrollamount="8">
   <img src="image/cream" alt="Slide 1" class="slide-img">
    <img src="image/creaam2" alt="Slide 2" class="slide-img">
    <img src="image/creaam2" alt="Slide 2" class="slide-img">
@@ -60,7 +60,6 @@
       <img src="image/watch" alt="Item 2">
       <p class="item-name">Watch</p>
       <p class="item-price">Rs. 3000</p>
-
     </div>
     <div class="item-card">
       <img src="image/jorden" alt="Item 3">
@@ -184,13 +183,13 @@
 
 <!-- Flash Sale products Section -->
 <section class="flash-sale">
-  <h2>products</h2>
+  <h2>Products</h2>
   
   <!-- Row 1 -->
   <div class="items-row">
     <div class="item-card">
       <img src="image/jorden" alt="Flash 1">
-      <p class="item-name">Jordan Shoes</p>
+0      <p class="item-name">Jordan Shoes</p>
       <p class="item-price">Rs. 1200</p>
     </div>
     <div class="item-card">
@@ -220,7 +219,7 @@
         <div class="footer-content">
             <div class="footer-column">
                 <h3>About Us</h3>
-                <p>Maize is your trusted online shop for quality products at the best prices.  <br><br>Thanks for visiting <br><br></p>
+                <p>Maize is your trusted online shop for quality products at the best prices.</p>
             </div>
 
             <div class="footer-column">
