--- a/login.html
+++ b/login.html
@@ -10,12 +10,13 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">Maize</div>
+    <div class="logo">Maze</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
       <a href="shop.html">Shop</a>
       <a href="contact.html">Contact</a>
+      
     </nav>
   </header>
 
@@ -49,7 +50,7 @@
         </ul>
       </div>
       <div class="footer-column">
-        <h3>Contact</h3>
+        <h3>LOGIN HERE</h3>
         <p>Email: maize@shop.com</p>
         <p>Phone: +977-9876543210</p>
       </div>
