--- a/product.html
+++ b/product.html
@@ -161,7 +161,7 @@
 
 <!-- Flash Sale products Section -->
 <section class="flash-sale">
-  <h2>products</h2>
+  <h2>Products</h2>
   
   <!-- Row 1 -->
   <div class="items-row">
