--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
   </header>
 
 
-  <div class="shopp"> <h1>shop</h1></div>
+  <div class="shopp"> <h1>SHOP</h1></div>
   
 <!-- Popular Items Section -->
 <section class="popular-items">
