Fix: show 2 pics per row on mobile

--- a/allproducts.html
+++ b/allproducts.html
@@ -10,7 +10,7 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">Maize</div>
+    <div class="logo">Maze</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
