--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">Maize</div>
+    <div class="logo">Maze</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
@@ -44,7 +44,7 @@
     <div class="footer-content">
       <div class="footer-column">
         <h3>About Us</h3>
-        <p>Maize is your trusted online shop for quality products at the best prices.</p>
+        <p>Maze is your trusted online shop for quality products at the best prices.</p>
       </div>
       <div class="footer-column">
         <h3>Quick Links</h3>
