--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     
-        <div class="logo">Maize  || | Product</div>
+        <div class="logo">Maze  || | Product</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
