--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
 <body>
     <header>
     
-        <div class="logo">Maize  ||| Shop</div>
+        <div class="logo">Maze  ||| Shop</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="product.html">Product</a>
